--- a/src/pages/Main/ProTariffCard/ProTariffCard.module.scss
+++ b/src/pages/Main/ProTariffCard/ProTariffCard.module.scss
@@ -2,7 +2,7 @@
 @import '../../../styles/mixins/_typography';
 @import '../../../styles/mixins/_var';
 
-.container {
+.proTariffCard {
 	width: 415px;
 	height: 540px;
 	box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
@@ -12,178 +12,182 @@
 	margin-top: 70px;
 	margin-bottom: 80px;
 	margin-right: 35px;
+}
 
-	&__greenTop {
-		width: 413px;
-		height: 132px;
-		background: #7ce3e1;
-		border-top-left-radius: 10px;
-		border-top-right-radius: 10px;
+.proTariffCard__greenTop {
+	width: 413px;
+	height: 132px;
+	background: #7ce3e1;
+	border-top-left-radius: 10px;
+	border-top-right-radius: 10px;
+}
 
-		&_iconTarget {
-			width: 93px;
-			height: 84px;
-			margin-top: -120px;
-			margin-left: 310px;
-		}
-	}
+.proTariffCard__iconTarget {
+	width: 93px;
+	height: 84px;
+	margin-top: -120px;
+	margin-left: 310px;
+}
 
-	&__title {
-		color: black;
-		font-size: 30px;
-		font-family: 'Inter', sans-serif;
-		font-weight: 500;
-		letter-spacing: 0.30px;
-		word-wrap: break-word;
-		position: absolute;
-		top: 30px;
-		left: 30px;
-	}
+.proTariffCard__title {
+	color: black;
+	font-size: 30px;
+	font-family: 'Inter', sans-serif;
+	font-weight: 500;
+	letter-spacing: 0.30px;
+	word-wrap: break-word;
+	position: absolute;
+	top: 30px;
+	left: 30px;
+}
 
-	&__moreButton {
-		width: 355px;
-		height: 59px;
-		background: $blue;
-		border-radius: 5px;
-		margin-top: 305px;
-		margin-left: 30px;
-		display: flex;
-		align-items: center;
-		justify-content: center;
-		transition: background-color 0.3s ease;
+.proTariffCard__moreButton {
+	width: 355px;
+	height: 59px;
+	background: $blue;
+	border-radius: 5px;
+	margin-top: 305px;
+	margin-left: 30px;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	transition: background-color 0.3s ease;
+}
 
-		&_moreText {
-			color: $white;
-			font-size: 20px;
-			font-family: 'Inter', sans-serif;
-			font-weight: 400;
-			letter-spacing: 0.20px;
-			word-wrap: break-word;
-		}
+.proTariffCard__moreButton_active {
+	background-color: darken(blue, 10%);
+}
 
-		&:active {
-			background-color: darken($blue, 10%);
-		}
-	}
+.proTariffCard__moreText {
+	color: $white;
+	font-size: 20px;
+	font-family: 'Inter', sans-serif;
+	font-weight: 400;
+	letter-spacing: 0.20px;
+	word-wrap: break-word;
+}
 
-	&__infoTextTitle {
-		color: black;
-		font-size: 18px;
-		font-family: 'Inter', sans-serif;
-		font-weight: 400;
-		letter-spacing: 0.18px;
-		word-wrap: break-word;
-		position: absolute;
-		top: 76px;
-		left: 30px;
-	}
+.proTariffCard__infoTextTitle {
+	color: black;
+	font-size: 18px;
+	font-family: 'Inter', sans-serif;
+	font-weight: 400;
+	letter-spacing: 0.18px;
+	word-wrap: break-word;
+	position: absolute;
+	top: 76px;
+	left: 30px;
+}
 
-	&__priceTitle {
-		color: black;
-		margin-top: -350px;
-		margin-left: 30px;
+.proTariffCard__priceTitle {
+	color: black;
+	margin-top: -350px;
+	margin-left: 30px;
+}
 
-		&_infoText {
-			color: black;
-			font-size: 18px;
-			font-family: 'Inter', sans-serif;
-			font-weight: 400;
-			letter-spacing: 0.18px;
-			word-wrap: break-word;
-			top: 165px;
-			left: 30px;
-		}
+.proTariffCard__infoText {
+	color: black;
+	font-size: 18px;
+	font-family: 'Inter', sans-serif;
+	font-weight: 400;
+	letter-spacing: 0.18px;
+	word-wrap: break-word;
+	top: 165px;
+	left: 30px;
+}
 
-		&_price {
-			margin-top: 33px;
-			color: black;
-			font-size: 30px;
-			font-family: 'Inter', sans-serif;
-			font-weight: 500;
-			letter-spacing: 0.30px;
-			word-wrap: break-word;
-		}
+.proTariffCard__price {
+	margin-top: 33px;
+	color: black;
+	font-size: 30px;
+	font-family: 'Inter', sans-serif;
+	font-weight: 500;
+	letter-spacing: 0.30px;
+	word-wrap: break-word;
+}
 
-		&_priceHigh {
-			margin-top: 168px;
-			margin-left: 19px;
-			color: black;
-			opacity: 0.50;
-			font-size: 25px;
-			font-family: 'Inter', sans-serif;
-			font-weight: 500;
-			letter-spacing: 0.25px;
-			word-wrap: break-word;
-		}
+.proTariffCard__priceHigh {
+	margin-top: 168px;
+	margin-left: 19px;
+	color: black;
+	opacity: 0.50;
+	font-size: 25px;
+	font-family: 'Inter', sans-serif;
+	font-weight: 500;
+	letter-spacing: 0.25px;
+	word-wrap: break-word;
+}
 
-		&_currency {
-			color: black;
-			font-size: 18px;
-			font-family: 'Inter', sans-serif;
-			font-weight: 400;
-			letter-spacing: 0.18px;
-			word-wrap: break-word;
-		}
-	}
+.proTariffCard__currency {
+	color: black;
+	font-size: 18px;
+	font-family: 'Inter', sans-serif;
+	font-weight: 400;
+	letter-spacing: 0.18px;
+	word-wrap: break-word;
+}
 
-	&__tariffItemsList {
-		margin-top: 73px;
-		margin-left: 30px;
-	}
+.proTariffCard__tariffItemsList {
+	margin-top: 73px;
+	margin-left: 30px;
 }
 
 @media (max-width: 767px) {
-	.container {
+	.proTariffCard {
 		width: 335px;
 		height: 512px;
 		margin-top: 70px;
 		margin-bottom: 80px;
 		margin-left: 14px;
+	}
 
-		&__greenTop {
-			width: 333px;
-			height: 132px;
+	.proTariffCard__greenTop {
+		width: 333px;
+		height: 132px;
+	}
 
-			&_iconTarget {
-				width: 69px;
-				height: 75px;
-				margin-top: -120px;
-				margin-left: 265px;
-			}
-		}
+	.proTariffCard__iconTarget {
+		width: 69px;
+		height: 75px;
+		margin-top: -120px;
+		margin-left: 230px;
+	}
 
-		&__title {
-			font-size: 30px;
-			letter-spacing: 0.30px;
-			top: 30px;
-			left: 24px;
-		}
+	.proTariffCard__title {
+		font-size: 30px;
+		letter-spacing: 0.30px;
+		top: 30px;
+		left: 24px;
+	}
 
-		&__priceTitle {
-			width: 273px;
-			margin-top: -330px;
-			margin-left: 24px;
-		}
+	.proTariffCard__moreButton {
+		width: 287px;
+		margin-left: 24px;
+		margin-top: 275px;
+	}
 
-		&__tariffItemsList {
-			width: 305px;
-			margin-top: 55px;
-			margin-left: 25px;
-		}
+	.proTariffCard__moreButton_active {
+		background-color: darken(blue, 10%);
+	}
 
-		&__moreButton {
-			width: 287px;
-			margin-left: 24px;
-			margin-top: 275px;
+	.proTariffCard__moreText {
+		font-size: 18px;
+		letter-spacing: 0.18px;
+	}
 
-			&_personalCabinetText {
-				font-size: 18px;
-				letter-spacing: 0.18px;
-			}
-		}
+	.proTariffCard__priceTitle {
+		width: 273px;
+		margin-top: -330px;
+		margin-left: 24px;
+	}
 
-		&__infoTextTitle {
-			left: 24px;
-		}
+	.proTariffCard__tariffItemsList {
+		width: 305px;
+		margin-top: 55px;
+		margin-left: 25px;
+	}
+
+	.proTariffCard__infoTextTitle {
+		left: 24px;
 	}
 }
