--- a/src/pages/Main/BusinessTariffCard/BusinessTariffCard.module.scss
+++ b/src/pages/Main/BusinessTariffCard/BusinessTariffCard.module.scss
@@ -54,7 +54,7 @@
 }
 
 .businessTariffCard__moreBusinessButton_active {
-  background-color: darken(blue, 10%);
+  background-color: darken($blue, 10%);
 }
 
 .businessTariffCard__moreText {
