--- a/src/pages/Main/MainPage.module.scss
+++ b/src/pages/Main/MainPage.module.scss
@@ -5,7 +5,6 @@
   flex-direction: column;
   max-width: 100%;
   height: auto;
-  padding: 20px 60px 0 60px;
 }
 
 .mainPage__upperBlocks {
@@ -13,21 +12,23 @@
   flex-direction: row;
   justify-content: space-between;
   width: 1440px;
-  padding-bottom: 120px;
+  padding: 20px 60px 120px 60px;
+
 }
 
 .mainPage__tariffCardSection {
   display: flex;
   justify-content: flex-start;
   width: 100%;
+  padding: 20px 60px 0 60px;
+
 }
 
 .mainPage__blueCloudImage {
-  width: 1200px;
-  margin-top: 50px;
-  margin-left: 51px;
-  margin-right: 82px;
-  object-fit: cover;
+  width: 100%;
+  height: 575.52px;
+  padding: 20px 0 0 60px;
+
 }
 
 @media (max-width: 767px) {
