--- a/src/pages/Main/ImageRightBlock/ImageRightBlock.module.scss
+++ b/src/pages/Main/ImageRightBlock/ImageRightBlock.module.scss
@@ -13,9 +13,12 @@
 @media (max-width: 767px) {
 	.imageRightBlock {
 		position: relative;
-		left: 10px;
-		width: 348px;
-		height: 328px;
+		width: 347.18px;
+		height: 327.31px;
+		left: 14px;
+		right: 0;
+		top: 39.3px;
+		bottom: 0;
 	}
 }
 
