--- a/src/pages/Main/ProTariffCard/ProTariffCard.module.scss
+++ b/src/pages/Main/ProTariffCard/ProTariffCard.module.scss
@@ -1,6 +1,7 @@
 // ProTariffCard/ProTariffCard.module.scss
 @import '../../../styles/mixins/_typography';
 @import '../../../styles/mixins/_var';
+@import '../../../styles/mixins/_mobile';
 
 .proTariffCard {
 	width: 415px;
@@ -121,11 +122,7 @@
 
 @media (max-width: 767px) {
 	.proTariffCard {
-		width: 335px;
-		height: 512px;
-		margin-top: 70px;
-		margin-bottom: 80px;
-		margin-left: 14px;
+		@include tariff-card-mobile;
 	}
 
 	.proTariffCard__greenTop {
