--- a/src/components/Carousel/Carousel.module.scss
+++ b/src/components/Carousel/Carousel.module.scss
@@ -11,7 +11,6 @@
 	height: 39px;
 	position: absolute;
 	margin-left: 51px;
-
 }
 
 .carousel__rightArrow {
@@ -89,17 +88,32 @@
 
 @media (max-width: 767px) {
 	.carousel {
-		max-width: 375px;
-		margin-left: 0;
-		margin-right: 0;
+		align-items: center;
+		overflow: hidden;
 	}
 
 	.carousel__leftArrow {
-		margin-right: 10px;
+		width: 39px;
+		height: 39px;
+		position: absolute;
+		margin-left: 0;
 	}
 
 	.carousel__rightArrow {
-		margin-left: 0;
+		width: 39px;
+		height: 39px;
+		position: absolute;
+		margin-left: 335px;
+	}
+
+	.carousel__cardsWrapper {
+		display: flex;
+		width: 350px;
+		padding: 0 0 0 22px;
+
+	}
+
+	.carousel__cardsWrapper__cards {
 	}
 
 	.carousel__card {
