--- a/src/pages/Main/FirstTitleText/FirstTitleText.module.scss
+++ b/src/pages/Main/FirstTitleText/FirstTitleText.module.scss
@@ -16,7 +16,7 @@
 		height: 68px;
 		font-size: 28px;
 		letter-spacing: 0.28px;
-		margin-left: 14px;
-		margin-top: 56px;
+		margin-bottom: 32px;
+		padding: 90px 0 20px 14px;
 	}
 }
