--- a/src/pages/Main/LeftTextBlock/LeftTextBlock.module.scss
+++ b/src/pages/Main/LeftTextBlock/LeftTextBlock.module.scss
@@ -56,8 +56,8 @@
 @media (max-width: 767px) {
 	.leftTextBlock {
 		display: block;
-		margin-top: 20px;
-		padding-left: 14px;
+		padding: 0 0 0 14px;
+		margin: 0;
 	}
 
 	.leftTextBlock__title {
@@ -76,8 +76,9 @@
 		margin-top: 19px;
 	}
 
-	.leftTextBlock__buttonBlueUnderText {
+	.leftTextBlock__fetchButton {
 		font-size: 20px;
 		letter-spacing: 0.20px;
+		margin-top: 32px;
 	}
 }
