--- a/src/pages/Main/MainPage.module.scss
+++ b/src/pages/Main/MainPage.module.scss
@@ -13,7 +13,6 @@
   justify-content: space-between;
   width: 1440px;
   padding: 20px 60px 120px 60px;
-
 }
 
 .mainPage__tariffCardSection {
@@ -21,40 +20,37 @@
   justify-content: flex-start;
   width: 100%;
   padding: 20px 60px 0 60px;
-
 }
 
 .mainPage__blueCloudImage {
   width: 100%;
   height: 575.52px;
   padding: 20px 0 0 60px;
-
 }
 
 @media (max-width: 767px) {
   .mainPage {
+    position: relative;
     display: block;
     width: 375px;
     height: 3518px;
-
-    padding: 0 26px 0 14px;
   }
 
   .mainPage__upperBlocks {
     display: block;
+    padding: 0;
   }
 
   .mainPage__tariffCardSection {
     display: block;
-    margin-left: 14px;
-    margin-right: 26px;
+    width: 100%;
+    padding: 37px 0 0 14px;
+
   }
 
   .mainPage__blueCloudImage {
     width: 891px;
     height: 393px;
-    margin-top: 80px;
-    margin-right: -530px;
-    margin-left: 14px;
+    padding: 30px 0 0 14px;
   }
 }
