--- a/src/pages/Main/SecondTitleText/SecondTitleText.module.scss
+++ b/src/pages/Main/SecondTitleText/SecondTitleText.module.scss
@@ -1,14 +1,9 @@
 // SecondTitleText.module.scss
-
+@import "../../../styles/mixins/_var";
+@import "../../../styles/mixins/_typography";
 
 .titleTextBlock {
-	color: #000;
-	font-family: 'FerryBlack', sans-serif;
-	font-size: 45px;
-	font-style: normal;
-	font-weight: 900;
-	line-height: normal;
-	letter-spacing: 0.45px;
+	@include title-text-h2;
 	margin-left: 60px;
 	margin-top: 90px;
 }
@@ -17,7 +12,7 @@
 	.titleTextBlock {
 		font-size: 28px;
 		letter-spacing: 0.28px;
-		margin-left: 14px;
-		margin-top: 56px;
+		margin: 0;
+		padding: 80px 0 0 14px;
 	}
 }
