--- a/src/pages/LoginPage/LoginForm/AuthInput/AuthInput.module.scss
+++ b/src/pages/LoginPage/LoginForm/AuthInput/AuthInput.module.scss
@@ -1,4 +1,6 @@
 // AuthInput.module.scss
+@import "../../../../styles/mixins/_var";
+@import "../../../../styles/mixins/_typography";
 
 .input {
 	width: 379px;
@@ -11,6 +13,29 @@
 	border-radius: 5px;
 	border: 1px #C7C7C7 solid;
 }
+
+.enterLoginText {
+	color: $green;
+	font-family: 'Inter', sans-serif;
+	font-size: 16px;
+	font-weight: 400;
+	letter-spacing: 0.32px;
+	word-wrap: break-word;
+	margin-left: 25px;
+	margin-top: 10px;
+}
+
+//.enterPasswordText {
+//	color: $green;
+//	font-family: 'Inter', sans-serif;
+//	font-size: 16px;
+//	font-weight: 400;
+//	letter-spacing: 0.32px;
+//	word-wrap: break-word;
+//	margin-left: 25px;
+//	margin-top: 20px;
+//}
+
 
 @media (max-width: 767px) {
 	.input {
