--- a/src/pages/LoginPage/LoginTitleText/LoginTitleText.module.scss
+++ b/src/pages/LoginPage/LoginTitleText/LoginTitleText.module.scss
@@ -9,8 +9,8 @@
 	position: relative;
 	line-height: normal;
 	letter-spacing: 0.45px;
-	margin-top: 69px;
-	margin-left: 60px;
+	padding: 30px 0 0 60px;
+
 }
 
 .titleTextBlock__text {
