--- a/src/pages/LoginPage/LoginTitleText/LoginTitleText.module.scss
+++ b/src/pages/LoginPage/LoginTitleText/LoginTitleText.module.scss
@@ -20,11 +20,10 @@
 
 @media (max-width: 767px) {
   .titleTextBlock {
-		width: 335px;
+		width: 383px;
 		height: 104px;
     font-size: 22px;
-    margin-top: 31px;
-    margin-left: 14px;
+		padding: 0 0 0 14px;
   }
 
 }
