--- a/src/pages/LoginPage/LoginForm/LoginForm.module.scss
+++ b/src/pages/LoginPage/LoginForm/LoginForm.module.scss
@@ -16,7 +16,6 @@
 .loginForm__enterText {
 	display: flex;
 	position: relative;
-	margin-bottom: 60px;
 }
 
 .loginForm__login {
@@ -47,7 +46,7 @@
 	font-weight: 400;
 	letter-spacing: 0.16px;
 	word-wrap: break-word;
-	margin-left: 77px;
+	margin-left: 90px;
 	margin-top: 25px;
 	position: relative;
 }
@@ -61,6 +60,29 @@
 	margin-left: 188px;
 }
 
+.loginForm__enterLoginText {
+	@include login-form-text;
+	margin-left: 25px;
+	margin-top: 60px;
+}
+
+.loginForm__enterPasswordText {
+	@include login-form-text;
+	margin-left: 25px;
+	margin-top: 20px;
+}
+
+.loginForm__inputField {
+	width: 379px;
+	height: 43px;
+	margin-left: 25px;
+	margin-top: 15px;
+	background: white;
+	box-shadow: 0 0 20px rgba(0, 0, 0, 0.05);
+	border-radius: 5px;
+	border: 1px #C7C7C7 solid;
+}
+
 .loginForm__button {
 	width: 379px;
 	height: 59px;
@@ -68,7 +90,7 @@
 	border-radius: 5px;
 	background: $blue;
 	margin-left: 25px;
-	margin-top: 15px;
+	margin-top: 30px;
 	margin-bottom: 15px;
 
 	.loginForm__button_text {
@@ -158,6 +180,31 @@
 		margin-left: 138px;
 	}
 
+	.loginForm__enterLoginText {
+		@include login-form-text;
+		font-size: 14px;
+		margin-left: 15px;
+		margin-top: 50px;
+	}
+
+	.loginForm__enterPasswordText {
+		@include login-form-text;
+		font-size: 14px;
+		margin-left: 15px;
+		margin-top: 20px;
+	}
+
+	.loginForm__inputField {
+		width: 379px;
+		height: 43px;
+		margin-left: 25px;
+		margin-top: 15px;
+		background: white;
+		box-shadow: 0 0 20px rgba(0, 0, 0, 0.05);
+		border-radius: 5px;
+		border: 1px #C7C7C7 solid;
+	}
+
 	.loginForm__button {
 		width: 305px;
 		height: 59px;
@@ -171,6 +218,14 @@
 
 	.enterHr {
 		display: flex;
+	}
+
+	.loginForm__inputField {
+		width: 305px;
+		height: 43px;
+		margin-right: 15px;
+		margin-left: 15px;
+		margin-top: 15px;
 	}
 
 	.loginForm__recoverPass {
