--- a/src/pages/Main/BeginnerTariffCard/BeginnerTariffCard.module.scss
+++ b/src/pages/Main/BeginnerTariffCard/BeginnerTariffCard.module.scss
@@ -74,10 +74,6 @@
 	justify-content: center;
 }
 
-.beginnerTariffCard__personalCabinetButton_active {
-	background-color: darken(#D2D2D2, 10%);
-}
-
 .beginnerTariffCard__personalCabinetButton_text {
 		color: black;
 		font-size: 20px;
@@ -85,6 +81,27 @@
 		font-weight: 400;
 		letter-spacing: 0.20px;
 		word-wrap: break-word;
+}
+
+.beginnerTariffCard__moreButton {
+	width: 355px;
+	height: 59px;
+	background: $blue;
+	border-radius: 5px;
+	margin-top: 305px;
+	margin-left: 30px;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+}
+
+.beginnerTariffCard__moreButton_text {
+	color: $white;
+	font-size: 20px;
+	font-family: "Inter", sans-serif;
+	font-weight: 400;
+	letter-spacing: 0.2px;
+	word-wrap: break-word;
 }
 
 .beginnerTariffCard__infoTitle {
