--- a/src/components/Loader/Loader.module.scss
+++ b/src/components/Loader/Loader.module.scss
@@ -3,17 +3,12 @@
 .loader {
   width: 175px;
   height: 63px;
-  position: absolute;
   opacity: 0.30;
   background: #D9D9D9;
   border-radius: 5px;
 }
 
 .loader__loaderImage {
-  width: 24px;
-  height: 24px;
-  left: 76px;
-  top: 19px;
-  position: absolute;
-  opacity: 0.50;
+  width: 100%;
+  height: 100%;
 }
