++ логин форма готова

--- a/src/pages/LoginPage/LoginForm/LoginForm.module.scss
+++ b/src/pages/LoginPage/LoginForm/LoginForm.module.scss
@@ -97,6 +97,17 @@
 	border: 1px #C7C7C7 solid;
 }
 
+.loginForm__inputField_error {
+	width: 379px;
+	height: 43px;
+	margin-left: 25px;
+	margin-top: 15px;
+	background: white;
+	box-shadow: 0 0 20px rgba(0, 0, 0, 0.05);
+	border-radius: 5px;
+	border: 1px solid rgb(255, 89, 89);
+}
+
 .loginForm__button {
 	width: 379px;
 	height: 59px;
