++ стили форма ввода запроса SearchPage

--- a/src/pages/SearchPage/SearchFormCard/CheckboxList/CheckboxList.module.scss
+++ b/src/pages/SearchPage/SearchFormCard/CheckboxList/CheckboxList.module.scss
@@ -43,6 +43,6 @@
 	&__icon {
 		width: 14px;
 		height: 14px;
-		margin-left: 1px; /* Пример отступа между текстом и иконкой галочки */
+		margin-left: 1px;
 	}
 }
