--- a/src/pages/SearchPage/SearchFormCard/DateInput/DateInput.module.scss
+++ b/src/pages/SearchPage/SearchFormCard/DateInput/DateInput.module.scss
@@ -5,26 +5,29 @@
 .dateInput {
   display: flex;
   flex-direction: row;
-  margin-top: 20px;
+  margin-top: 560px;
 
-  &__dateLabel {
-    font-size: 14px;
-    font-family: 'Inter', sans-serif;
-    font-weight: 400;
-    color: $gray-light;
-    margin-bottom: 10px;
+  .dateInput__errorLabel {
+    @include error-login-text;
+    position: absolute;
+    top: 480px;
+    left: 120px;
   }
 
-  &__firstDate {
+  &__startDate,
+  &__endDate {
     @include input;
-    flex: 1;
     width: 176px;
     position: relative;
-    margin-right: 20px;
 
     &:hover {
       border-color: $blue;
     }
+  }
+
+  &__startDate {
+    flex: 1;
+    margin-right: 20px;
   }
 
   &__inputWrapper {
@@ -36,25 +39,20 @@
   &__dateInputIcon {
     width: 20px;
     height: 20px;
-    margin-left: 10px;
+    margin-left: 150px;
+    margin-top: 10px;
   }
 
   &__placeholder {
+    text-align: center;
     font-size: 14px;
     font-family: 'Inter', sans-serif;
     font-weight: 400;
     color: $gray-light;
-    margin-bottom: 10px;
-  }
-
-  &__secondDate {
-    @include input;
-    width: 176px;
-    position: relative;
-
-    &:hover {
-      border-color: $blue;
-    }
+    position: absolute;
+    top: 0;
+    left: 85px;
+    transform: translate(-50%, -50%);
   }
 
   .react-datepicker-wrapper {
