--- a/src/pages/SearchPage/SearchFormCard/SearchFormCard.module.scss
+++ b/src/pages/SearchPage/SearchFormCard/SearchFormCard.module.scss
@@ -2,166 +2,38 @@
 @import "../../../styles/mixins/_var";
 @import "../../../styles/mixins/_media";
 
-.container {
-	width: 872px;
-	height: 543px;
-	//left: 0;
-	//top: 0;
-	position: relative;
-	box-shadow: 0 0 20px $shadow;
-	align-items: center;
-	border-radius: 10px;
-	margin-top: 20px;
-	margin-bottom: 64px;
-	margin-left: 53px;
+.searchFormCard__rightBlock {
+	width: 428px;
+	height: auto;
+	position: absolute;
+	left: 496px;
+	top: 390px;
+}
 
-	&__inn {
-		width: 100%;
-		height: 100%;
+.searchFormCard__rightBlockSmallText {
+	font-size: 14px;
+	color: $gray-medium;
+	font-family: 'Inter', sans-serif;
+	font-weight: 400;
+	letter-spacing: 0.42px;
+	word-wrap: break-word;
+	margin-top: -115px;
+	margin-left: 555px;
+}
 
-		&__label {
-			left: 0;
-			top: 8px;
-			position: absolute;
-			color: $black;
-			font-size: 18px;
-			font-family: 'Inter', sans-serif;
-			font-weight: 400;
-			letter-spacing: 0.54px;
-			word-wrap: break-word;
-			margin-top: 29px;
-			margin-left: 44px;
-		}
+.searchFormCard__searchButton {
+	position: absolute;
+	box-shadow: 0 0 20px $shadow-light;
+	margin-top: -190px;
+	margin-left: 550px;
 
-		&__input {
-			@include input;
-			top: 71px;
-			left: 44px;
-		}
-	}
-
-	&__tonality {
-		width: 100%;
-		height: 100%;
-
-		&__label {
-			left: 0;
-			top: 8px;
-			position: absolute;
-			color: $black;
-			font-size: 18px;
-			font-family: 'Inter', sans-serif;
-			font-weight: 400;
-			letter-spacing: 0.54px;
-			word-wrap: break-word;
-			margin-top: 144px;
-			margin-left: 44px;
-		}
-
-		&__input {
-			@include input;
-			top: 186px;
-			left: 44px;
-		}
-	}
-
-	&__documentCount {
-		width: 100%;
-		height: 100%;
-
-		&__label {
-			left: 0;
-			top: 8px;
-			position: absolute;
-			color: $black;
-			font-size: 18px;
-			font-family: 'Inter', sans-serif;
-			font-weight: 400;
-			letter-spacing: 0.54px;
-			word-wrap: break-word;
-			margin-top: 259px;
-			margin-left: 44px;
-		}
-
-		&__input {
-			@include input;
-			top: 301px;
-			left: 44px;
-		}
-	}
-
-	// Диапазон поиска*
-	&__leftBlockLabel {
-		left: 0;
-		top: 8px;
-		position: absolute;
-		color: $black;
-		font-size: 18px;
+	&__ButtonText {
+		color: $white;
+		font-size: 22px;
 		font-family: 'Inter', sans-serif;
-		font-weight: 400;
-		letter-spacing: 0.54px;
+		font-weight: 500;
+		letter-spacing: 0.66px;
 		word-wrap: break-word;
-		margin-top: 383px;
-		margin-left: 44px;
-	}
-
-	&__dateInputs {
-		display: flex;
-		flex-direction: row;
-		margin-left: 44px;
-		margin-top: -1225px;
-	}
-
-	&__rightBlock {
-		width: 428px;
-		height: auto;
-		left: 496px;
-		margin-top: -570px;
-		position: absolute;
-
-		&__checkboxList {
-			li {
-				label {
-					input {
-					}
-
-					&:hover {
-						cursor: pointer;
-					}
-				}
-			}
-		}
-	}
-
-	&__rightBlockSmallText {
-		font-size: 14px;
-		color: $gray-medium;
-		font-family: 'Inter', sans-serif;
-		font-weight: 400;
-		letter-spacing: 0.42px;
-		word-wrap: break-word;
-		margin-top: -115px;
-		margin-left: 580px;
-	}
-
-	&__searchButton {
-		width: 305px;
-		height: 59px;
-		background: $blue;
-		position: absolute;
-		box-shadow: 0 0 20px $shadow-light;
-		border-radius: 5px;
-		margin-top: -190px;
-		margin-left: 580px;
-
-		&__ButtonText {
-			color: $white;
-			font-size: 22px;
-			font-family: 'Inter', sans-serif;
-			font-weight: 500;
-			letter-spacing: 0.66px;
-			word-wrap: break-word;
-		}
 	}
 }
 
@@ -235,7 +107,7 @@
 			}
 		}
 
-		.rightBlock {
+		.searchFormCard__rightBlock {
 			display: none;
 
 			.checkboxList {
