--- a/src/pages/SearchPage/SearchFormCard/SearchFormInputs/SearchFormInputs.module.scss
+++ b/src/pages/SearchPage/SearchFormCard/SearchFormInputs/SearchFormInputs.module.scss
@@ -14,94 +14,76 @@
 	margin-left: 53px;
 }
 
+.searchFormCard__inn {
+	display: flex;
+}
+
 .searchFormCard__inn_label {
-	left: 0;
-	top: 8px;
-	position: absolute;
-	color: $black;
-	font-size: 18px;
-	font-family: 'Inter', sans-serif;
-	font-weight: 400;
-	letter-spacing: 0.54px;
-	word-wrap: break-word;
-	margin-top: 29px;
-	margin-left: 44px;
+	@include title-search-label;
+	padding: 29px 0 0 44px;
+}
+
+.searchFormCard__inn_label_star {
+	@include title-search-label-star;
+	padding: 21px 0 0 0;
 }
 
 .searchFormCard__inn_input {
 	@include input;
-	top: 71px;
-	left: 44px;
+	margin-left: 44px;
+	margin-top: 20px;
 }
 
-.searchFormCard__tonality {
-	width: 100%;
-	height: 100%;
+.searchFormCard__inn__errorLabel {
+	@include error-login-text;
+	margin-top: 2px;
+	margin-left: 64px;
+}
 
-	&_label {
-		left: 0;
-		top: 8px;
-		position: absolute;
-		color: $black;
-		font-size: 18px;
-		font-family: 'Inter', sans-serif;
-		font-weight: 400;
-		letter-spacing: 0.54px;
-		word-wrap: break-word;
-		margin-top: 144px;
-		margin-left: 44px;
-	}
+.searchFormCard__tonality_label {
+	@include title-search-label;
+	padding: 11px 0 0 44px;
+}
 
-	&_input {
-		@include input;
-		top: 186px;
-		left: 44px;
-	}
+.searchFormCard__tonality_input {
+	@include input;
+	margin-left: 44px;
+	margin-top: 20px;
+}
+
+.searchFormCard__documentCount {
+	display: flex;
+}
+
+.searchFormCard__documentCount_input {
+	@include input;
+	margin-left: 44px;
+	margin-top: 20px;
+}
+
+.searchFormCard__documentCount_label {
+	@include title-search-label;
+	padding: 30px 0 0 44px;
+}
+
+.searchFormCard__documentCount_label_star {
+	@include title-search-label-star;
+	padding: 20px 0 0 0;
 }
 
 .searchFormCard__documentCount__errorLabel {
 	@include error-login-text;
-	position: absolute;
-	margin-top: -190px;
+	margin-top: -110px;
 	margin-left: 90px;
-
 }
-.searchFormCard__documentCount {
-	width: 100%;
-	height: 100%;
 
-	&_label {
-		left: 0;
-		top: 8px;
-		position: absolute;
-		color: $black;
-		font-size: 18px;
-		font-family: 'Inter', sans-serif;
-		font-weight: 400;
-		letter-spacing: 0.54px;
-		word-wrap: break-word;
-		margin-top: 259px;
-		margin-left: 44px;
-	}
-
-	&_input {
-		@include input;
-		top: 301px;
-		left: 44px;
-	}
-}
+//.searchFormCard__inn__errorLabel_hidden {
+//	display: none;
+//}
 
 // Диапазон поиска*
 .searchFormCard__leftBlockLabel {
-	left: 0;
-	top: 8px;
-	position: absolute;
-	color: $black;
-	font-size: 18px;
-	font-family: 'Inter', sans-serif;
-	font-weight: 400;
-	letter-spacing: 0.54px;
-	word-wrap: break-word;
+	@include title-search-label;
 	margin-top: 383px;
 	margin-left: 44px;
 }
