--- a/src/pages/SearchPage/SearchPage.module.scss
+++ b/src/pages/SearchPage/SearchPage.module.scss
@@ -4,7 +4,7 @@
 	display: flex;
 	justify-content: space-between;
 	width: 1440px;
-	height: 1122px;
+	//height: 1122px;
 	align-items: flex-start;
 	flex-shrink: 0;
 	background: #FFF;
@@ -53,14 +53,15 @@
 		&_document {
 			width: 91px;
 			height: 111px;
-			margin-left: 138px;
+			margin-left: 15px;
+			margin-top: -25px;
 		}
 
 		&_folders {
-			width: 91px;
-			height: 111px;
-			margin-left: 390px;
-			margin-top: -85px;
+			width: 140px;
+			height: 68px;
+			margin-left: 290px;
+			margin-top: -90px;
 		}
 	}
 }
