--- a/src/styles/mixins/_typography.scss
+++ b/src/styles/mixins/_typography.scss
@@ -36,6 +36,26 @@
   letter-spacing: 0.45px;
 }
 
+// Миксин для стилей заголовков карточки поиска
+@mixin title-search-label {
+  color: $black;
+  font-size: 18px;
+  font-family: 'Inter', sans-serif;
+  font-weight: 400;
+  letter-spacing: 0.54px;
+  word-wrap: break-word;
+}
+
+// Миксин для стилей звездочки карточки поиска
+@mixin title-search-label-star {
+  color: $black;
+  font-family: 'Inter', sans-serif;
+  font-size: 25px;
+  font-weight: 400;
+  line-height: 30px;
+  letter-spacing: 3%;
+}
+
 // Миксин для стилей карточек тарифов
 @mixin labelStyles {
   font-size: 18px;
@@ -105,7 +125,6 @@
 @mixin input {
   width: 242px;
   height: 43px;
-  position: absolute;
   background: $white;
   box-shadow: 0 0 20px rgba(0, 0, 0, 0.05);
   border-radius: 5px;
