--- a/src/pages/SearchPage/SearchFormCard/DateInput/DateInput.module.scss
+++ b/src/pages/SearchPage/SearchFormCard/DateInput/DateInput.module.scss
@@ -5,8 +5,6 @@
 .dateInput {
   display: flex;
   flex-direction: row;
-  margin-top: 1380px;
-
 
   &__startDate,
   &__endDate {
@@ -24,7 +22,6 @@
   }
 
   &__inputWrapper {
-    //position: relative;
     display: flex;
     align-items: center;
   }
@@ -37,12 +34,12 @@
   }
 
   &__placeholder {
-    text-align: center;
+    //text-align: center;
     font-size: 14px;
     font-family: 'Inter', sans-serif;
     font-weight: 400;
     color: $gray-light;
-    transform: translate(-50%, -50%);
+    //transform: translate(-50%, -50%);
     margin-left: 20px;
   }
 
